space between first cards removed

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="card col-lg-4 col-md-6 space">
           <img src="Assets/sub 4.png" class="card-img-top" alt="...">
         </div>
-        <div class="card col-lg-4 col-md-6 mt-5">
+        <div class="card col-lg-4 col-md-6">
           <img src="Assets/IMG_8117 1.png" class="card-img-top" alt="...">
         </div>
         <div class="card col-lg-4 col-md-6 takeout">
